# redpesk-try

./: README.md
conf.d/cmake/: config.cmake
conf.d/packaging/: debian.changelog  debian.control  debian.helloworld-binding-bin.install  debian.helloworld-binding-redtest.install  debian.serial-binding-bin.install  debian.serial-binding-redtest.install  debian.serial-binding-test.install  helloworld-binding.dsc  helloworld-binding.spec  modem-binding.dsc  modem-binding.spec  serial-binding.dsc  serial-binding.spec
conf.d/wgt/: config.xml.in
gpiod-mlk/: CMakeLists.txt  modem-bindingv3.c
gpiod-mlk/HL7692/: HL7692-Driver.c  HL7692-Driver.h
gpiod-mlk/rwgpio/: rwgpio.c  rwgpio.h
gpiod-mlk/rwserial/: rwserial.c  rwserial.h
redtest/: CMakeLists.txt
test/afb-test/tests/: helloworld.lua
